The bug where the faceshot is cutoff on mobile should now be fixed.

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .2);
     
     /* center the div in the middle of the page */
-    display: flex;
+    display: flex; 
     justify-content: center;
     align-items: center;
 }
@@ -62,6 +62,10 @@ body {
 
 /* media queries */
 @media (max-width: 575.98px) {
+    body {
+        align-items: unset;
+    }
+
     .titleText {
         padding-bottom: 10%;
     }
